--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
                     <div class="shelf" id="shelf">
                         
                     </div>
+                    <div class="alert">! Don't equip item in here !</div>
                     <button data-toscreen="town" class="return">Exit Shop</button>
                 </div>
                 <div class="screen" data-screen="arena" style="display: none;">
